--- a/src/Components/MyCard/MyCard.css
+++ b/src/Components/MyCard/MyCard.css
@@ -8,13 +8,14 @@
     padding: 12px 30px;
     border-radius: 25px;
     border: 2px solid white;
+    transition: .5s;
 }
 
 .resume:hover {
     transition: .5s;
-    background-color: white;
-    border: 2px solid teal;
-    color: teal;
+    box-shadow: 5px 5px 5px black;
+    transform: translateY(-5px);
+    border: 3px solid white;
 }
 
 .link-pic {
