--- a/src/Components/MyCard/MyCard.css
+++ b/src/Components/MyCard/MyCard.css
@@ -42,7 +42,7 @@
         width: 400px;
         background-image: linear-gradient(210deg, #0b717f, #0ba276);
         position: fixed;
-        left: 500px;
+        left: 900px;
     }
 
     .card-sm2 {
@@ -75,8 +75,15 @@
         border-bottom: 2px solid white;
     }
 
+    .close-btn {
+        position: absolute;
+        right: 0;
+        width: 20%;
+    }
+
     .close-btn:hover {
         transform: rotate(180deg);
         transition: .5s;
+
     }
 }
