--- a/src/Components/NotFound.css
+++ b/src/Components/NotFound.css
@@ -29,7 +29,7 @@
     .body404 {
         width: 100%;
         height: 900px;
-        background-image: url('https://i.ibb.co/5Wg1JKk/404.jpg');
+        background-image: url('https://i.ibb.co/KsYM2m2/404-mobile.jpg');
     }
 
     .four {
